--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -13,7 +13,7 @@ body
 
 .barra_superior
 {
-    background-color: #3c3c3c;
+    background-color: #193654;
     width: 100%;
 }
 
@@ -39,7 +39,7 @@ input
 button
 {
     color: #ffffff;
-    background-color: #014f94;
+    background-color: #014e94;
     border-radius: 3px;
     border: none;
     cursor: pointer;
@@ -51,11 +51,10 @@ button
 
 .mensaje
 {
-    background-color: #467a49e0;
     position: absolute;
     width: 300px;
     margin-left: 40%;
-    margin-top: 10px;
+    margin-top: 30px;
     padding: 8px;
     border-radius: 3px;
     text-align: center;
@@ -63,10 +62,30 @@ button
     display: none;
 }
 
+#mensaje1, #mensaje2
+{
+    display: none;
+}
+
+.contenedor
+{
+    position: absolute;
+    margin-top: 90px;
+    width: 100%;
+    height: 40%;
+    overflow-y: scroll;
+}
+
 @media only screen and (max-width: 750px)
 {
     input
     {
         width: 75%;
+    }
+
+    .contenedor
+    {
+        font-size: 12px;
+        height: 30%;
     }
 }
